# physae

./: .gitignore  .pre-commit-config.yaml  10_PIAE_trainv2_effv2_opt.py  Dockerfile  Makefile  README.md  bash_optuna.sh  model_data.py  optimize.py  optuna_phisae.py  physae  physae.py  pyproject.toml  serve.py  soumission.txt  train_bash.txt  train_basic.py
_build/html/: api_overview.html  experiments.html  gases.html  genindex.html  getting_started.html  hyperparameters.html  index.html  model_playbook.html  objects.inv  search.html  searchindex.js  tutorial.html
configs/: deploy.yaml  eval.yaml  infer.yaml  train.yaml
data/: README.md  sample_input.json
docs/: api_overview.rst  conf.py  experiments.rst  hyperparameters.rst  index.rst  migration.md  model_playbook.rst  requirements.txt  romeo_multinode.md  tutorial.rst
notebooks/: 01_quickstart_training.ipynb  02_hyperparameter_sweeps.ipynb  03_inference_and_submission.ipynb  04_guide_efficientnet.ipynb  05_guide_efficientnet_large.ipynb  06_guide_efficientnet_v2.ipynb  07_guide_convnext.ipynb  08_training_workflow.ipynb  09_optuna_workflow.ipynb  data_construction.ipynb  full_control_training_optuna.ipynb  optimisation_physae.ipynb  optimize_models.ipynb  optuna_workflow.ipynb  training_workflow.ipynb
physae/: __init__.py  baseline.py  callbacks.py  cli.py  config.py  config_loader.py  dataset.py  evaluation.py  factory.py  losses.py  model.py  noise.py  normalization.py  optimization.py  optimizers.py  parameter_catalog.py  physae_soumission.txt  physics.py  pipeline.py  simple_workflows.py  training.py  validation.py
project/: README.md
scripts/: plot_synthetic_spectra.py  romeo_multinode.sh  run_optuna.py  train_stage.py
tests/: test_data.py  test_factory.py  test_inference.py  test_model.py  test_noise.py  test_training.py
(+87 files in other folders)
