[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physae"
version = "0.1.0"
description = "Physically-informed auto-encoder for gas spectroscopy"
readme = "README.md"
authors = [{name = "PhysAE Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "PyYAML>=6.0",
    "optuna>=3.0",
    "pytorch-lightning>=2.0",
    "torch>=1.13",
]

[project.optional-dependencies]
docs = ["sphinx>=6.0", "myst-parser>=1.0"]

[project.scripts]
physae = "physae.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["physae*"]

[tool.setuptools.package-data]
"physae" = ["configs/**/*.yaml"]
